<resources>
    <string name="app_name">Pubg Tournament</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_">Continue</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="phone_number_error">Please enter phone number</string>
    <string name="phone_number_valid_phone_number">Please enter valid phone number</string>
    <string name="OTP_has_been_sent_to_you_on_your_mobile_phone_please_enter_it_below">OTP has been sent to you on your mobile phone. Please enter it below</string>
    <string name="enter_otp">Enter Otp...</string>

    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="share_using">Share Application</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>

    <string name="join_contest">Join Contest</string>
    <string name="tournament">Pubg\nTournament</string>
    <string name="room_id_and_password_will_be_shared_before_mins_of_game_start_time">Room ID and password will be shared before 15 mins of game start time</string>
    <string name="note_minimum_pubg_level_required_30_or_above_nhacking_is_strictly_prohibited">Note: Minimum PUBG level required 30 or above. Hacking/Team Up is strictly prohibited.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="internet_error">Internet connection error</string>
    <string name="exit_msg">Are you sure you want to exits ?</string>

    <string name="your_full_name">Your Full Name</string>
    <string name="your_pubg_name">Your Pubg Name</string>
    <string name="your_squard_name">Your Squad Name</string>
    <string name="save">Save</string>

    <string name="please_enter_valid_name">Please enter valid name</string>
    <string name="please_enter_valid_pungname">Please enter valid pubg name</string>
    <string name="please_enter_valid_squadname">Please enter valid sqaud name</string>

    <string name="player_1">Player Name 1</string>
    <string name="player_2">Player Name 2</string>
    <string name="player_3">Player Name 3</string>
    <string name="player_4">Player Name 4</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="Address">Address</string>
    <string name="youtube_link">Youtube Channel Link</string>


</resources>
