<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.e.app.view.ToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/contact_us"
        app:layout_constraintTop_toTopOf="parent"
        app:leftDrawable="@drawable/ic_back_arrow" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:clickable="false"
            android:enabled="false"
            android:id="@+id/etMobile"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiMobile">

        <EditText
            android:clickable="false"
            android:enabled="false"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiAddress"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmail">

        <EditText
            android:clickable="false"
            android:enabled="false"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:id="@+id/etAddress"
            android:singleLine="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiYoutubeLink"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiAddress">

        <EditText
            android:clickable="false"
            android:enabled="false"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:id="@+id/etYoutubeLink"
            android:singleLine="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/youtube_link"
            android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>